# fittings-site

./: .gitignore  LICENCE  build.sh  readme.md  setup_notes.md
fittings-client/: README.md  index.html  main.css  package.json  webpack.config.js
fittings-client/client/: index.js
fittings-client/public/: index.html
fittings-client/src/: App.css  App.js  App.vue  app-client.js  index.css  index.html
fittings-client/src/assets/: main.css
fittings-client/src/components/: CreateGalleriesView.js  Galleries.vue  Gallery.vue  app.js
fittings-client/src/picture-view/: gallery.js  gallery.jsx  images.js
fittings-client/src/router/: index.js
fittings-data/: .gitignore  Cargo.toml  update-database.sh
fittings-data/init-scripts/: 000.001.history.sql
fittings-data/migrations/20170531192030_galleries/: down.sql  up.sql
fittings-data/migrations/20170531192951_gallery_images/: up.sql
fittings-data/migrations/20170601190946_image_locations_to_string/: down.sql  up.sql
fittings-data/migrations/20170818180927_users/: up.sql
fittings-data/src/: lib.rs
fittings-data/src/database/: mod.rs  models.rs
fittings-data/src/galleries/: mod.rs  models.rs
fittings-data/src/images/: mod.rs  models.rs
fittings-data/src/users/: mod.rs  models.rs
fittings-data/update-scripts/: 0  000.001.images.sql
fittings-server/: .env  .gitignore  Cargo.toml  Rocket.toml
fittings-server/migrations/20170510184134_images/: down.sql  up.sql
fittings-server/migrations/20170523185313_images/: down.sql  up.sql
fittings-server/migrations/20170531192951_gallery_images/: down.sql  up.sql
fittings-server/src/: lib.rs
fittings-server/src/database/: mod.rs  models.rs
fittings-server/src/examples/: mod.rs
fittings-server/src/examples/paste_bin/: paste_bin.rs  paste_id.rs
fittings-server/src/examples/servers/: paste_bin.rs  paste_id.rs
fittings-server/src/security/: mod.rs
fittings-server/src/standard/: mod.rs
fittings-server/src/standard/client_files/: static_files.rs
fittings-server/src/standard/image_loader/: image_loader.rs
fittings-server/src/standard/rest/: authentication.rs  galleries.rs  image_loader.rs  static_files.rs
fittings-server/src/standard/static_files/: static_files.rs
fittings-server/src/uptime/: mod.rs
fittings-server/src/uptime/home/: home.rs
fittings-server/static/: index.html  main.css
fittings-server/static-old/: index.html
fittings-server/upload/: ED2
server/: Cargo.toml
(+3 files in other folders)
