[package]
name = "fittings-data"
version = "0.1.0"
authors = ["Cameron Milsom <cameron.milsom@gmail.com>"]
repository = "https://github.com/Fittings/fittings-site"

[lib]
name = "fittings_data"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lazy_static = "0.2.8"
dotenv = "0.8.0"


#Rocket
rocket = "0.2.7"
rocket_contrib = "0.2.7"
rocket_codegen = "0.2.7"

names = "0.11.0"

#Diesel
diesel = { version = "0.13.0", features = ["sqlite"] }
diesel_codegen = { version = "0.13.0", features = ["sqlite"] }
r2d2 = "0.7.2"
r2d2-diesel = "0.13.0"
rand = "0.3"
