[package]
name = "fittings-server"
version = "0.1.0"
authors = ["Cameron Milsom <cameron.milsom@gmail.com>"]
repository = "https://github.com/Fittings/fittings-site"

[[bin]]
name = "fittings-server"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.8.0"
names = "0.11.0"


#Rocket
rocket = "0.3.0"
rocket_contrib = "0.3.0"
rocket_codegen = "0.3.0"

#Serde
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

#argon2rs
argon2rs = "0.2.5"

rand = "0.3"
time = "0.1.37"

[dependencies.fittings-data]
path = "../fittings-data/"

